Initialisation of firebase auth and db
setting up login/signup functionality

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,6 @@
         android:layout_marginTop="40dp"
         android:text="Log in"
         tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="399dp"
-        android:onClick="goToHome"/>
+        tools:layout_editor_absoluteY="399dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
