Updates to data transfer to/from db

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    android:background="#e6e6e6"
+    tools:context=".MessageActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -26,7 +26,6 @@
                 android:id="@+id/profile_image"
                 />
 
-
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -40,34 +39,42 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="@color/greentwo"
-            app:tabSelectedTextColor="@color/offwhitetext"
-            app:tabIndicatorColor="@color/Bubblegum_IC"
-            app:tabTextColor="@color/Cherry_IC"
-            />
-
-
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <!-- TODO: update to a view pager menu -->
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!--app:layout_behaviour="@string/appbar_scrolling_view_behaviour" -->
+        android:layout_height="match_parent"
+        android:layout_below="@id/appbar_layout"
+        android:layout_above="@id/bottom"/>
+
+    <RelativeLayout
+        android:id="@+id/bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#fff"
+        android:padding="5dp">
+
+        <EditText
+            android:id="@+id/text_send"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btn_send"
+            android:background="@android:color/transparent"
+            android:hint="Type a message" />
+
+        <ImageButton
+            android:id="@+id/btn_send"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/ic_action_name" />
 
 
-
-    </androidx.viewpager.widget.ViewPager>
-
+    </RelativeLayout>
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
