Fixed chats, make chat page double sided

--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -11,14 +11,13 @@
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
-
+        android:id="@+id/show_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/background_left"
         android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
         android:text="I sure love Exchainge."
-        android:padding="12dp"
-    />
+        android:padding="12dp" />
 
 </RelativeLayout>
