Updates to user profile display, including ability to upload and store profile images

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,8 @@
                 android:layout_marginTop="15dp"
                 android:textColor="@color/Papaya_IC"
                 android:textStyle="bold"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:layout_marginBottom="20dp"/>
 
 
 
