--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -20,4 +20,12 @@
         android:text="I sure love Exchainge."
         android:padding="12dp" />
 
+
+    <TextView
+        android:id="@+id/text_seen"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/show_message" />
+
 </RelativeLayout>
