--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -29,6 +29,15 @@
             android:layout_alignParentRight="true"/>
 
 
+        <TextView
+            android:id="@+id/text_seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="seen"
+            android:layout_below="@+id/show_message"
+            android:layout_alignParentRight="true"/>
+
+
 
     </RelativeLayout>
 
