Update some code to avoid nullpointer Added password reset functionality

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".login">
 
+<LinearLayout
+    android:layout_marginTop="200dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:padding="15dp"
+    tools:ignore="MissingConstraints">
+
+
     <TextView
         android:id="@+id/loginText"
         android:layout_width="wrap_content"
@@ -59,5 +69,17 @@
         android:text="Log in"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="399dp" />
+
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Help with your password"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:textColor="@color/Raspberry_IC" />
+
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
