--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -50,6 +50,19 @@
         android:layout_toEndOf="@id/profile_image"/>
 
 
+    <TextView
+        android:id="@+id/last_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username"
+        android:layout_toRightOf="@id/profile_image"
+        android:layout_marginTop="6dp"
+        android:paddingTop="6dp"
+        android:textColor="@color/Papaya_IC"
+        android:layout_marginLeft="10dp"
+        android:maxLines="1"/>
+
+
 
 
 
