--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,55 +3,94 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <com.google.android.material.appbar.AppBarLayout
+    <!-- This DrawerLayout has two children at the root  -->
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <!-- This LinearLayout represents the contents of the screen  -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/greenthree"
-            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/MenuStyle">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/profile_image"
-                />
+            <!-- The ActionBar displayed at the top -->
+            <include
+                layout="@layout/drawer_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
+            <!-- The main content view where fragments are loaded -->
+            <FrameLayout
+                android:id="@+id/flContent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="20dp"
-                android:id="@+id/username"
-                android:text="username"
-                android:layout_marginLeft="25dp"
-                android:layout_marginStart="30dp"
-                android:textColor="#fff"
-                android:textStyle="bold" />
-
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="@color/greentwo"
-            app:tabSelectedTextColor="@color/offwhitetext"
-            app:tabIndicatorColor="@color/Bubblegum_IC"
-            app:tabTextColor="@color/Cherry_IC"
-            />
+        <!-- The navigation drawer that comes from the left -->
+        <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nvView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@android:color/white"
+            app:menu="@menu/drawer_view" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@color/greenthree"-->
+<!--            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"-->
+<!--            app:popupTheme="@style/MenuStyle">-->
+
+<!--            <de.hdodenhof.circleimageview.CircleImageView-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:id="@+id/profile_image"-->
+<!--                />-->
+
+
+<!--            <TextView-->
+<!--                android:layout_width="80dp"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:id="@+id/username"-->
+<!--                android:text="username"-->
+<!--                android:layout_marginLeft="25dp"-->
+<!--                android:layout_marginStart="30dp"-->
+<!--                android:textColor="#fff"-->
+<!--                android:textStyle="bold" />-->
+
+
+<!--        </androidx.appcompat.widget.Toolbar>-->
+
+<!--        <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/tab_layout"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:background="@color/greentwo"-->
+<!--            app:tabSelectedTextColor="@color/offwhitetext"-->
+<!--            app:tabIndicatorColor="@color/Bubblegum_IC"-->
+<!--            app:tabTextColor="@color/Cherry_IC"-->
+<!--            />-->
+
+
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
 
     <!-- TODO: update to a view pager menu -->
