Updates to drawer menu, fixes to colors and layout, addition of profile image holder and display funcitonality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/mediumGreyOne"
             android:orientation="vertical">
 
             <!-- The ActionBar displayed at the top -->
@@ -42,7 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/white"
+            app:itemTextColor="@color/Banana_IC"
+            android:background="@color/darkgrey"
             app:menu="@menu/drawer_view" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
