--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,18 +1,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="192dp"
-    android:background="?attr/colorPrimaryDark"
-    android:padding="16dp"
+    android:layout_height="142dp"
+    android:background="@color/darkgrey"
+
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
 
-    <TextView
-        android:id="@+id/usernameTextView"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="username"
-        android:textColor="@android:color/white"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:layout_height="140dp" >
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="25dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/andromeda_galaxy"
+            />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/navProfileImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="90dp"
+            android:paddingBottom="50dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+
+        <TextView
+            android:id="@+id/usernameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="username"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:layout_marginTop="94dp"
+            android:layout_marginLeft="60dp"/>
+
+        <TextView
+            android:id="@+id/taglineTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="tagline"
+            android:textColor="@color/Raspberry_IC"
+            android:textSize="12sp"
+            android:layout_marginTop="120dp"
+            android:layout_marginLeft="60dp"/>
+
+
+
+    </FrameLayout>
+
+
 
 </LinearLayout>
