--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Exchainge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Exchainge" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <item name="android:actionMenuTextColor">@color/offwhitetext</item>
         <!-- Primary brand color. -->
