--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,13 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="142dp"
     android:background="@color/darkgrey"
-
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="140dp" >
 
         <ImageView
@@ -22,10 +21,10 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/navProfileImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="90dp"
-            android:paddingBottom="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="80dp"
+
             android:src="@drawable/ic_launcher_background"
             />
 
@@ -37,7 +36,7 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:layout_marginTop="94dp"
-            android:layout_marginLeft="60dp"/>
+            android:layout_marginLeft="70dp"/>
 
         <TextView
             android:id="@+id/taglineTextView"
@@ -52,7 +51,5 @@
 
 
     </FrameLayout>
-
-
 
 </LinearLayout>
