--- a/app/src/main/res/layout/activity_settings_change_tagline.xml
+++ b/app/src/main/res/layout/activity_settings_change_tagline.xml
@@ -24,12 +24,12 @@
         android:layout_marginTop="20dp" />
 
     <Button
+        android:id="@+id/confirmChangesButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Confirm changes"
         android:layout_below="@id/changeTaglineEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        />
+        android:text="Confirm changes" />
 
 </RelativeLayout>
