Add tagline to message header, set limit to tagline length

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,15 +26,26 @@
                 android:id="@+id/profile_image"
                 />
 
+
             <TextView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:id="@+id/username"
                 android:text="username"
                 android:layout_marginLeft="25dp"
                 android:layout_marginStart="30dp"
                 android:textColor="#fff"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/taglineText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|right"
+                android:text="taglinetaglinetaglinetaglinetagline"
+                android:textStyle="italic"
+                android:layout_marginRight="20dp"/>
+
 
 
         </androidx.appcompat.widget.Toolbar>
