--- a/app/src/main/res/layout/activity_settings_change_tagline.xml
+++ b/app/src/main/res/layout/activity_settings_change_tagline.xml
@@ -21,7 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/changeTagline"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:maxLength="28"
+        />
 
     <Button
         android:id="@+id/confirmChangesButton"
