--- a/app/src/main/res/layout/list_template.xml
+++ b/app/src/main/res/layout/list_template.xml
@@ -7,9 +7,11 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-         />
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+       />
 
     <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
