--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -15,4 +15,13 @@
             android:icon="@drawable/baseline_settings_24"
             android:title="Settings" />
     </group>
+
+    <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_wallet"
+            android:icon="@drawable/ic_baseline_account_balance_wallet_24"
+            android:title="Wallet" />
+
+    </group>
 </menu>
