--- a/app/src/main/res/layout/activity_settings_change_privacy.xml
+++ b/app/src/main/res/layout/activity_settings_change_privacy.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,20 +7,57 @@
     tools:context=".Fragments.WalletFragment">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/securityCard"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:cardBackgroundColor="@color/lightgrey"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/lightgrey">
 
-        <RelativeLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Security"
+            android:textColor="@color/greenthree"
+            android:textSize="16sp" />
+
+        <ListView
+            android:id="@+id/listSecurity"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp">
 
+        </ListView>
 
-
-        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/privacyCard"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/securityCard"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/lightgrey">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Privacy"
+            android:textColor="@color/greenthree"
+            android:textSize="16sp" />
+
+        <ListView
+            android:id="@+id/listPrivacy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp">
+
+        </ListView>
+
+    </androidx.cardview.widget.CardView>
+
+
+</RelativeLayout>
