Building of s_p list views

--- a/app/src/main/res/layout/activity_settings_change_privacy.xml
+++ b/app/src/main/res/layout/activity_settings_change_privacy.xml
@@ -9,8 +9,10 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/securityCard"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="6dp"
         app:cardBackgroundColor="@color/lightgrey">
 
         <TextView
@@ -19,16 +21,16 @@
             android:padding="10dp"
             android:text="Security"
             android:textColor="@color/greenthree"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <ListView
             android:id="@+id/listSecurity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp">
 
         </ListView>
-
 
     </androidx.cardview.widget.CardView>
 
@@ -36,8 +38,10 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/privacyCard"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/securityCard"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/lightgrey">
 
@@ -47,13 +51,14 @@
             android:padding="10dp"
             android:text="Privacy"
             android:textColor="@color/greenthree"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <ListView
             android:id="@+id/listPrivacy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp">
 
         </ListView>
 
