Work on login/signup styling

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,13 +60,17 @@
 
     <Button
         android:id="@+id/loginButton"
+        style="@android:style/Widget.Material.Button.Inset"
+        android:backgroundTint="@color/Papaya_IC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+
+        android:text="Log in"
+        android:textColor="@color/offwhitetext"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
-        android:layout_marginTop="40dp"
-        android:text="Log in"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="399dp" />
 
