--- a/app/src/main/res/layout/activity_init_landing.xml
+++ b/app/src/main/res/layout/activity_init_landing.xml
@@ -24,6 +24,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@android:style/Widget.Material.Button.Inset"
+        android:backgroundTint="@color/Papaya_IC"
+        android:textColor="@color/offwhitetext"
         android:text="Sign in"
         android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
@@ -36,6 +39,9 @@
         android:layout_width="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        style="@android:style/Widget.Material.Button.Inset"
+        android:backgroundTint="@color/Papaya_IC"
+        android:textColor="@color/offwhitetext"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/signInButton"
         android:layout_marginTop="20dp"
