--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -88,6 +88,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
+        style="@android:style/Widget.Material.Button.Inset"
+        android:backgroundTint="@color/Papaya_IC"
+        android:textColor="@color/offwhitetext"
         android:text="Sign up"
         app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintLeft_toLeftOf="parent"
